# HyperState

./: .clang-format  CMakeLists.txt  README.md  package.xml  vcs.repos
.github/workflows/: actions.yml  cmake.yml  main.yml
apps/tests/: CMakeLists.txt
include/hyper/: definitions.hpp  range.hpp
include/hyper/motion/: continuous.hpp  forward.hpp  motion.hpp  temporal.hpp
include/hyper/motion/interpolators/spatial/: abstract.hpp  cartesian.hpp  forward.hpp  se3.hpp  spatial.hpp
include/hyper/motion/interpolators/temporal/: basis.hpp  forward.hpp  polynomial.hpp  temporal.hpp
include/hyper/state/: abstract.hpp  continuous.hpp  definitions.hpp  forward.hpp  motion.hpp  range.hpp  state.hpp  temporal.hpp
include/hyper/state/interpolators/: abstract.hpp  basis.hpp  forward.hpp  interpolators.hpp  polynomial.hpp
include/hyper/state/interpolators/spatial/: cartesian.hpp  forward.hpp  interpolators.hpp  rn.hpp  se3.hpp  su2.hpp
include/hyper/state/interpolators/temporal/: basis.hpp  forward.hpp  interpolators.hpp  polynomial.hpp  temporal.hpp
include/hyper/state/policies/: abstract.hpp  cartesian.hpp  forward.hpp  se3.hpp
internal/hyper/motion/: continuous.cpp
internal/hyper/motion/interpolators/spatial/: se3.cpp
internal/hyper/motion/interpolators/temporal/: basis.cpp  polynomial.cpp
internal/hyper/state/: abstract.cpp  continuous.cpp  state.cpp  temporal.cpp
internal/hyper/state/interpolators/: basis.cpp  polynomial.cpp
internal/hyper/state/interpolators/spatial/: cartesian.cpp  rn.cpp  se3.cpp  su2.cpp
internal/hyper/state/interpolators/temporal/: basis.cpp  polynomial.cpp
internal/hyper/state/policies/: se3.cpp
tests/internal/hyper/: range_tests.cpp
tests/internal/hyper/motion/: motion_tests.cpp
tests/internal/hyper/motion/interpolators/temporal/: basis_tests.cpp
tests/internal/hyper/state/: state_tests.cpp
tests/internal/hyper/state/interpolators/: basis_tests.cpp
tests/internal/hyper/state/interpolators/temporal/: basis_tests.cpp
