<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hyper_state</name>
  <version>1.0.0</version>
  <description>HyperState implements optimization-oriented discrete- and continuous-time state parametrizations.</description>
  <maintainer email="dhug@mavt.ethz.ch">David Hug</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>hyper_variables</build_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

